fix: fix overflow issue on smaller screen sizes

--- a/packages/micro-journeys/src/interactive-pathway.scss
+++ b/packages/micro-journeys/src/interactive-pathway.scss
@@ -79,6 +79,7 @@ $bolt-interactive-step--dot-size: 1.2rem;
 
   &__items {
     flex: 1 1 70%;
+    max-width: 100%; // fix to prevent UI from overflowing on smaller screen sizes
   }
 }
 
